--- a/template/about.html
+++ b/template/about.html
@@ -17,12 +17,12 @@
     <header class="p-3 bg-dark text-white">
         <div class="container">
             <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-                <a href="base.html" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+                <a href="../index.html" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
                     <img class="bi me-2" src="logo-header.png" alt="Logo livros de rua">
                 </a>
 
                 <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                    <li><a href="base.html" class="nav-link px-2 text-secondary">Home</a></li>
+                    <li><a href="../index.html" class="nav-link px-2 text-secondary">Home</a></li>
                     <li><a href="about.html" class="nav-link px-2 text-white">Quem Somos</a></li>
                     <li><a href="#" class="nav-link px-2 text-white">Contato</a></li>
                 </ul>
