--- a/template/contato.html
+++ b/template/contato.html
@@ -34,7 +34,7 @@
                             <a class="nav-link text-white" href="template/about.html">Quem Somos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="contato.html">Contato</a>
+                            <a class="nav-link text-white" href="#">Contato</a>
                         </li>
                     </ul>
                 </div>
@@ -52,20 +52,26 @@
         </header>
     </nav>
 
-    <main class="container">
-        <div class="banner-home">
-            <img class="banner-img img-fluid" src="banner-about.jpg" alt="Imagem onde está falando quem somos">
-            <h1 class="titulo-about">Quem Somos</h1>
-            <span class="sub-titulo-about">
-                <p>Em 2013, a ideia surgiu num grupo de debate e na época arrecadei vários livros, mas naquele momento
-                    não levar adiante e acabei doando todos os livros que tinha conseguido.</p>
-                <p>Nesses 8 anos que o projeto ficou na gaveta surgiram muitas outras coisas que eram prioridade, porém
-                    nesse ano resolvi, com apoio da minha esposa Paula, colocar em prática o <strong>Livros em
-                        Rua</strong>. Aliás, nem imaginava que tantas pessoas colaborariam com o projeto.</p>
-                <p>No meu ponto de vista, é um dever nosso levar acesso aos livros principalmente em bairros mais
-                    humildes/periféricos, porque isso é um previlégio nosso. Nesses lugares o Estado não chega e a
-                    sociedade desvia o olhar.</p>
-            </span>
+    <main class="container contato-box">
+        <div class="contato">
+            <h1>Contato</h1>
+            <div class="input-group mb-3">
+                <span class="input-group-text">Nome:</span>
+                <input type="text" class="form-control" id="nome" placeholder="">
+            </div>
+            <div class="input-group mb-3">
+                <span class="input-group-text">E-mail:</span>
+                <input type="email" class="form-control" id="email" placeholder="">
+            </div>
+            <div class="input-group mb-3">
+                <span class="input-group-text">Telefone:</span>
+                <input type="number" class="form-control" id="telefone" placeholder="">
+            </div>
+            <div class="input-group">
+                <span class="input-group-text">Assunto:</span>
+                <textarea class="form-control" aria-label="With textarea"></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary">Enviar</button>
         </div>
     </main>
 
