--- a/core/templates/about.html
+++ b/core/templates/about.html
@@ -13,7 +13,7 @@
         <p>Em 2013, a ideia surgiu num grupo de debate e na época arrecadei vários livros, mas naquele momento
             não levar adiante e acabei doando todos os livros que tinha conseguido.</p>
         <p>Nesses 8 anos que o projeto ficou na gaveta surgiram muitas outras coisas que eram prioridade, porém
-            nesse ano resolvi, com apoio da minha esposa Paula, colocar em prática o <strong>Livros em
+            nesse ano resolvi, com apoio da minha esposa Paula, colocar em prática o <strong>Livros de
                 Rua</strong>. Aliás, nem imaginava que tantas pessoas colaborariam com o projeto.</p>
         <p>No meu ponto de vista, é um dever nosso levar acesso aos livros principalmente em bairros mais
             humildes/periféricos, porque isso é um previlégio nosso. Nesses lugares o Estado não chega e a
