--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -31,7 +31,7 @@
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link active text-white" href="{% url 'core:home' %}">Home <span
-                                class="sr-only">(current)</span></a>
+                                class="sr-only"></span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-white" href="{% url 'core:about' %}">Quem Somos</a>
@@ -43,13 +43,23 @@
             </div>
             <div>
                 <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <button type="button" class="btn btn-outline-light me-2">Login</button>
+                    {% if user.is_authenticated %}
+                    <li class="nav-item login-user">
+                        <span class="text-white">Olá {{ user.nome }}</span>
                     </li>
                     <li class="nav-item">
-                        <button type="button" class="btn btn-warning"><a
-                                href="{% url 'core:cadastro' %}">Cadastrar</a></button>
+                        <a class="btn btn-warning" href="{% url 'account_logout' %}">Sair</a>
                     </li>
+                    {% else %}
+                    <li class="nav-item">
+                        <a class="btn btn-outline-light me-2" href="{% url 'account_login' %}">
+                            Entrar </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="btn btn-warning" href="{% url 'core:cadastro' %}">
+                            Cadastrar</a>
+                    </li>
+                    {% endif %}
                 </ul>
             </div>
         </div>
