--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -81,7 +81,8 @@
     </div>
 
     <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-        <li class="ms-3"><a class="text-muted" href="{% static '#' %}"><i class="fab fa-instagram fa-2x"></i></a></li>
+        <li class="ms-3"><a class="text-muted" href="https://www.instagram.com/livrosderua/" target="_blank"><i
+                    class="fab fa-instagram fa-2x"></i></a></li>
     </ul>
 </footer>
 
