--- a/core/templates/contato.html
+++ b/core/templates/contato.html
@@ -1,31 +1,54 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load crispy_forms_tags %}
 
 {% block content %}
 
 <div class="contato-box">
     <div class="contato">
-        <h1>Contato</h1>
-        <div class="row">
-            <div class=" mb-3">
-                <label for="nome" class="form-label">Nome:</label>
-                <input type="text" class="form-control" id="nome" placeholder="">
+
+        <div class="container">
+            {% if messageSent %}
+            <div class="row text-center">
+                <h3><strong>E-mail enviado com sucesso!</strong></h3>
+                <p>Sua mensagem foi entregue para livrosderuacacador@gmail.com</p>
             </div>
-            <div class="mb-3">
-                <label for="email" class="form-label">E-mail:</label>
-                <input type="email" class="form-control" id="email" placeholder="">
+            {% else %}
+            <h1>Contato</h1>
+            <div class="row">
+                <form method="post">
+                    {% csrf_token %}
+                    {% for field in form %}
+                    <div class=" mb-3">
+                        {{field|as_crispy_field}}
+                    </div>
+                    {% endfor %}
+                    <button type="submit" class="btn btn-primary">Enviar</button>
+                </form>
             </div>
-            <div class="mb-3">
-                <label for="telefone" class="form-label">Telefone:</label>
-                <input type="tel" class="form-control" id="telefone" placeholder="">
-            </div>
-            <div class="mb-3">
-                <label for="assunto" class="form-label">Assunto:</label>
-                <textarea class="form-control" aria-label="With textarea"></textarea>
-            </div>
+            {% endif %}
         </div>
-        <button type="submit" class="btn btn-primary">Enviar</button>
+
     </div>
 </div>
 
-{% endblock %}
+{% block script %}
+
+<script type='text/javascript' src='//code.jquery.com/jquery-compat-git.js'></script>
+<script type='text/javascript' src='//igorescobar.github.io/jQuery-Mask-Plugin/js/jquery.mask.min.js'></script>
+<script type="text/javascript">
+    var behavior = function (val) {
+        return val.replace(/\D/g, '').length === 11 ? '(00) 00000-0000' : '(00) 0000-00009';
+    },
+        options = {
+            onKeyPress: function (val, e, field, options) {
+                field.mask(behavior.apply({}, arguments), options);
+            }
+        };
+
+    $('#id_telefone').mask(behavior, options);
+</script>
+
+{% endblock script %}
+
+{% endblock content %}
