--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -14,6 +14,7 @@
             {{ form|crispy }}
             <button class="btn btn-success" type="submit">Entrar</button>
         </form>
+        <p>Não tem cadastro? <a href="{% url 'core:cadastro' %}">Clique aqui</a></p>
     </div>
 </div>
 
